# lyra-lang-rs

./: Cargo.toml  README.md
src/: analyze_bindings.rs  errors.rs  evaluate.rs  gc_foreign.rs  lib.rs  parser.rs  semantics.rs  syntax.rs  syntax_checks.rs  value.rs
src/builtins/: bools.rs  ints.rs  mod.rs
