[package]
name = "lyra-lang"
version = "0.1.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
edition = "2018"

[dependencies]
either = "1.5.0"
failure = "0.1.3"
failure_derive = "0.1.3"
gc = "0.3.2"
gc_derive = "0.3.2"
im-rc = "12.2.0"
ordered-float = "1.0.1"
ref_thread_local = "0.0.0"
rug = "1.2.2"
ropey = "0.9.2"
strtod = { git = "https://github.com/ssbrs/strtod" }
